<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cs426.tripadvisor.CategoryListActivity"
    android:background="@drawable/cat_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/promptChooseCat"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:id="@+id/textViewChooseCat"
        android:textColor="#e4f1fe"
        android:textStyle="italic"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="5"
        android:layout_below="@+id/textViewChooseCat">
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/hotel"
            android:onClick="onClickHotel"
            style="@style/btnStyleShakespeare"
            android:textSize="36sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/shop"
            android:onClick="onClickShop"
            style="@style/btnStyleShakespeare"
            android:textSize="36sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/restaurant"
            android:onClick="onClickRest"
            style="@style/btnStyleShakespeare"
            android:textSize="36sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/park"
            android:onClick="onClickPark"
            style="@style/btnStyleShakespeare"
            android:textSize="36sp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/theater"
            android:onClick="onClickTheater"
            style="@style/btnStyleShakespeare"
            android:textSize="36sp"/>
    </LinearLayout>
</RelativeLayout>
