<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cs426.tripadvisor.PlacePickerActivity"
    android:orientation="vertical"
    android:weightSum="10"
    android:background="@drawable/light_green_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/chosen_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingTop="5dp"
        android:textColor="#5F9EA0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center_horizontal"
        android:textSize="36sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/place_name_tv"
        android:text="@string/place_dummy"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textColor="#008B8B"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_gravity="center_horizontal"
        android:id="@+id/place_desc_tv"
        android:text="@string/see"
        android:textSize="24sp"
        android:textColor="#5F9EA0"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/rating"
        android:textSize="24sp"
        android:textColor="#5F9EA0"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:id="@+id/rating_bar" />

</LinearLayout>
