<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        android:background="@drawable/bg_search">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/round_et"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <EditText android:id="@+id/inputSearch"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:inputType="textVisiblePassword"
                android:background="@drawable/noborder"
                android:singleLine="true"
                android:padding="8dp"
                android:textColor="#000000"
                />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:padding="5dp"
                android:src="@android:drawable/ic_menu_search" />
        </LinearLayout>

        <ListView
            android:id="@+id/attraction_lv"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="8"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/back"
            android:onClick="click_back"
            android:layout_weight="1"
            style="@style/SingleGradient"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3"
        android:id="@+id/attraction_detail"
        android:visibility="invisible"
        android:background="#dadfe1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:orientation="horizontal"
            android:background="#d2d7d3">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:scaleType="fitXY"
                android:id="@+id/detail_iv"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="38sp"
                    android:id="@+id/attractionName_tv"
                    android:text="@string/sample"
                    android:textColor="#03c9a9"
                    style="?android:attr/listSeparatorTextViewStyle"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/address_tv"
                    android:text="@string/sample"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="#6c7a89"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/phone_tv"
                    android:text="@string/sample"
                    android:textSize="22sp"
                    android:textStyle="italic"
                    android:textColor="#6c7a89"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/tap_video"
                    android:textSize="14sp"
                    android:textColor="#001243"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.8"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Website:"
                android:textSize="28sp"
                android:textColor="#000000"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="website"
                android:id="@+id/web_tv"
                android:textSize="24sp"
                android:textColor="#ff0645AD"
                android:onClick="clickWeb"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample"
                android:id="@+id/aux_tv"
                android:textStyle="bold"
                android:textSize="32sp"
                android:textColor="#ef4836"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="36sp"
                android:textColor="#000000"
                android:layout_marginStart="@dimen/activity_horizontal_margin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/desAndTime_tv"
                android:textSize="30sp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="34sp"
                android:text="@string/rating"
                android:layout_gravity="center_horizontal"
                android:textColor="#000000"
                android:layout_marginTop="@dimen/activity_vertical_margin"/>
            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_gravity="center_horizontal"
                android:id="@+id/rate_bar"
                android:rating="4" />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:text="@string/back"
            android:onClick="click_close_attraction_detail"/>
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/aux_list"
        android:visibility="invisible"
        android:background="#87d37c">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textColor="#f62459"
            android:gravity="center"
            android:textSize="38sp"
            android:text="ENJOY!"/>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/auxListView"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.7"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.1"
            android:text="@string/back"
            android:onClick="click_close_aux_list"/>
    </LinearLayout>
</merge>