<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cs426.tripadvisor.PlaceAddActivity"
    android:orientation="vertical"
    android:background="@drawable/dark_orange_bg">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/add_title"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        style="?android:attr/listSeparatorTextViewStyle"
        android:textColor="#ffffff"
        android:textSize="24sp"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Name: "
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"
            />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:hint="Insert name here"
            android:inputType="text"
            android:id="@+id/name_et"
            android:textColor="#c5eff7"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address: "
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:hint="1234 AAA Street"
            android:id="@+id/address_et"
            android:inputType="text"
            android:textColor="#c5eff7"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Number: "
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#ffffff"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:hint="123456789"
            android:inputType="phone"
            android:id="@+id/phone_et"
            android:textColor="#c5eff7" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="@dimen/activity_vertical_margin">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:scaleType="centerInside"
            android:layout_weight="1"
            android:src="@drawable/no_photo"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:id="@+id/iv_photo"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/takepic"
            android:onClick="click_take_pic"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/add2"
            android:onClick="add_click"/>
    </LinearLayout>
</LinearLayout>
